--- a/productsholland.html
+++ b/productsholland.html
@@ -45,57 +45,57 @@
         "ingredients": "Alcoholvrije Dranken",
     },
     {
-        "name": "Pepsi",
+        "name": "Pepsi 0.25",
         "price": "120",
         "ingredients": "Alcoholvrije Dranken",
     },
     {
-        "name": "Pepsi Max",
+        "name": "Pepsi Max 0.25",
         "price": "120",
         "ingredients": "Alcoholvrije Dranken",
     },
     {
-        "name": "Gazoza",
+        "name": "Gazoza 0.25",
         "price": "100",
         "ingredients": "Alcoholvrije Dranken",
     },
     {
-        "name": "IJsthee",
+        "name": "IJsthee 0.25",
         "price": "120",
         "ingredients": "Alcoholvrije Dranken",
     },
     {
-        "name": "7Up",
+        "name": "7Up 0.25",
         "price": "120",
         "ingredients": "Alcoholvrije Dranken",
     },
     {
-        "name": "Sap",
+        "name": "Sap 0.25",
         "price": "140",
         "ingredients": "Alcoholvrije Dranken",
     },
     {
-        "name": "Vers Citroensap",
+        "name": "Vers Citroensap 0.25",
         "price": "90",
         "ingredients": "Alcoholvrije Dranken",
     },
     {
-        "name": "Vers Geperst Sinaasappelsap",
+        "name": "Vers Geperst Sinaasappelsap 0.25",
         "price": "180",
         "ingredients": "Alcoholvrije Dranken",
     },
     {
-        "name": "Mirinda",
+        "name": "Mirinda 0.25",
         "price": "120",
         "ingredients": "Alcoholvrije Dranken",
     },
     {
-        "name": "Huisgemaakte Limonade",
+        "name": "Huisgemaakte Limonade 0.25",
         "price": "160",
         "ingredients": "Alcoholvrije Dranken",
     },
     {
-        "name": "Vruchtensoda",
+        "name": "Vruchtensoda 0.33",
         "price": "140",
         "ingredients": "Alcoholvrije Dranken",
     },
@@ -177,92 +177,92 @@
         // WINES
         [
     {
-        "name": "Synthesis Cuvee Barrique (Droog)",
+        "name": "Synthesis Cuvee Barrique (Droog) 0.75",
         "price": "1900",
         "ingredients": "Wijn",
     },
     {
-        "name": "Dionis Vranec Barrique (Droog)",
+        "name": "Dionis Vranec Barrique (Droog) 0.75",
         "price": "2200",
         "ingredients": "Wijn",
     },
     {
-        "name": "Hermes Vranec (Droog)",
+        "name": "Hermes Vranec (Droog) 0.75",
         "price": "1300",
         "ingredients": "Wijn",
     },
     {
-        "name": "Hermes Cabernet Sauvignon (Droog)",
+        "name": "Hermes Cabernet Sauvignon (Droog) 0.75",
         "price": "1300",
         "ingredients": "Wijn",
     },
     {
-        "name": "Amfora Vranec (Halfdroog)",
+        "name": "Amfora Vranec (Halfdroog) 0.75",
         "price": "900",
         "ingredients": "Wijn",
     },
     {
-        "name": "Chardonnay Barrique Gefermenteerd (Droog)",
+        "name": "Chardonnay Barrique Gefermenteerd (Droog) 0.75",
         "price": "2400",
         "ingredients": "Wijn",
     },
     {
-        "name": "Muscat Temjanika (Halfdroog)",
+        "name": "Muscat Temjanika (Halfdroog) 0.75",
         "price": "1350",
         "ingredients": "Wijn",
     },
     {
-        "name": "Elegija Chardonnay (Droog)",
+        "name": "Elegija Chardonnay (Droog) 0.75",
         "price": "1300",
         "ingredients": "Wijn",
     },
     {
-        "name": "Elegija Traminer (Droog)",
+        "name": "Elegija Traminer (Droog) 0.75",
         "price": "1300",
         "ingredients": "Wijn",
     },
     {
-        "name": "Elegija Zupljanka (Droog)",
+        "name": "Elegija Zupljanka (Droog) 0.75",
         "price": "1300",
         "ingredients": "Wijn",
     },
     {
-        "name": "Amphora Cuvee (Halfdroog)",
+        "name": "Amphora Cuvee (Halfdroog) 0.75",
         "price": "900",
         "ingredients": "Wijn",
     },
     {
-        "name": "Temjanika (Droog)",
+        "name": "Temjanika (Droog) 0.75",
         "price": "1400",
         "ingredients": "Wijn",
     },
     {
-        "name": "Chardonnay (Droog)",
+        "name": "Chardonnay (Droog) 0.75",
         "price": "1400",
         "ingredients": "Wijn",
     },
     {
-        "name": "Sauvignon Blanc (Droog)",
+        "name": "Sauvignon Blanc (Droog) 0.75",
         "price": "1400",
         "ingredients": "Wijn",
     },
     {
-        "name": "Amfora Rosé (Droog)",
+        "name": "Amfora Rosé (Droog) 0.75",
         "price": "900",
         "ingredients": "Wijn",
     },
     {
-        "name": "Elegija Syrah (Droog)",
+        "name": "Elegija Syrah (Droog) 0.75",
         "price": "1200",
         "ingredients": "Wijn",
     },
     {
-        "name": "Muscat Rolinger (Droog)",
+        "name": "Muscat Rolinger (Droog) 0.75",
         "price": "1250",
         "ingredients": "Wijn",
     },
     {
-        "name": "Muscat Rolinger Rood (Halfdroog)",
+        "name": "Muscat Rolinger Rood (Halfdroog) 0.75",
         "price": "1250",
         "ingredients": "Wijn",
     },
@@ -328,207 +328,207 @@
         // Alcoholic beverages
         [
     {
-        "name": "Gele Rakija",
+        "name": "Gele Rakija 0.04",
         "price": "120",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Witte Rakija",
+        "name": "Witte Rakija 0.04",
         "price": "120",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Mastika",
+        "name": "Mastika 0.04",
         "price": "120",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Rakija Azbuka",
+        "name": "Rakija Azbuka 0.04",
         "price": "130",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Gordion Amber Rakija",
+        "name": "Gordion Amber Rakija 0.04",
         "price": "160",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Badel Williams Rakija",
+        "name": "Badel Williams Rakija 0.04",
         "price": "170",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Gin Badel",
+        "name": "Gin Badel 0.04",
         "price": "120",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Smidgin",
+        "name": "Smidgin 0.04",
         "price": "250",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Gin Beefeater",
+        "name": "Gin Beefeater 0.04",
         "price": "170",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Gin Gordons",
+        "name": "Gin Gordons 0.04",
         "price": "190",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Gin Pink Gordons",
+        "name": "Gin Pink Gordons 0.04",
         "price": "180",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Gin Bombay",
+        "name": "Gin Bombay 0.04",
         "price": "240",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Vodka Badel",
+        "name": "Vodka Badel 0.04",
         "price": "120",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Baileys",
+        "name": "Baileys 0.04",
         "price": "180",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Feneys",
+        "name": "Feneys 0.04",
         "price": "150",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Krushkovac Perenlikeur",
+        "name": "Krushkovac Perenlikeur 0.04",
         "price": "140",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Tequila",
+        "name": "Tequila 0.03",
         "price": "130",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Amaretto",
+        "name": "Amaretto 0.04",
         "price": "150",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Korlat Slivovitsj",
+        "name": "Korlat Slivovitsj 0.04",
         "price": "220",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Korlat Maraska",
+        "name": "Korlat Maraska 0.05",
         "price": "220",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Shot",
+        "name": "Shot 0.04",
         "price": "100",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Smirnoff",
+        "name": "Smirnoff 0.04",
         "price": "160",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Jack Daniels",
+        "name": "Jack Daniels 0.04",
         "price": "280",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Jameson",
+        "name": "Jameson 0.04",
         "price": "180",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Jameson Black",
+        "name": "Jameson Black 0.04",
         "price": "290",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Johnny Red",
+        "name": "Johnny Red 0.04",
         "price": "160",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Johnny Black",
+        "name": "Johnny Black 0.04",
         "price": "260",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "4 Roses",
+        "name": "4 Roses 0.04",
         "price": "200",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "William Peel",
+        "name": "William Peel 0.04",
         "price": "150",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Rum Morgan",
+        "name": "Rum Morgan 0.04",
         "price": "160",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Jägermeister",
+        "name": "Jägermeister 0.04",
         "price": "210",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Pelinkovac Badel",
+        "name": "Pelinkovac Badel 0.04",
         "price": "120",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Pelinkovac Antik",
+        "name": "Pelinkovac Antik 0.04",
         "price": "170",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Cognac Badel",
+        "name": "Cognac Badel 0.04",
         "price": "120",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Cognac Badel Black",
+        "name": "Cognac Badel Black 0.04",
         "price": "160",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Rum Badel",
+        "name": "Rum Badel 0.04",
         "price": "120",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Stock 84",
+        "name": "Stock 84 0.04",
         "price": "150",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Tequila Olmeca",
+        "name": "Tequila Olmeca 0.04",
         "price": "170",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Aperol",
+        "name": "Aperol 0.04",
         "price": "160",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Korlat Lozova",
+        "name": "Korlat Lozova 0.04",
         "price": "220",
         "ingredients": "Alcoholische Dranken",
     },
     {
-        "name": "Campari",
+        "name": "Campari 0.04",
         "price": "160",
         "ingredients": "Alcoholische Dranken",
     },
@@ -666,7 +666,7 @@
         "ingredients": "Gehakt 250g, Gele Kaas 100g",
     },
     {
-        "name": "Kebabs met Kaymak",
+        "name": "Kebabs met Kaymak 350g",
         "price": "360",
         "ingredients": "Gerecht met Gehakt",
     },
@@ -686,7 +686,7 @@
         "ingredients": "Gehakt 300g, Kaas, Zdenka, Champignons, Ham",
     },
     {
-        "name": "Kebabs",
+        "name": "Kebabs 300g",
         "price": "320",
         "ingredients": "Gerecht met Gehakt",
     },
@@ -797,12 +797,12 @@
         //dishes in a pan
         [
     {
-        "name": "Dorpse Schotel",
+        "name": "Dorpse Schotel 450g",
         "price": "440",
         "ingredients": "Varkensvlees, Kip, Kaas, Champignons, Ui, Knoflook, Paprika, Tomaten",
     },
     {
-        "name": "Lihnidia Pan",
+        "name": "Lihnidia Pan 450g",
         "price": "480",
         "ingredients": "Varkensvlees, Kip, Spek, Tomaten, Paprika, Ui, Knoflook, Champignons, Gerookte Kaas",
     },
@@ -817,7 +817,7 @@
         "ingredients": "Gerechten uit de Pan",
     },
     {
-        "name": "Champignons met Spek en Kaas",
+        "name": "Champignons met Spek en Kaas 200g",
         "price": "370",
         "ingredients": "Gerechten uit de Pan",
     },
@@ -1017,12 +1017,12 @@
         "ingredients": "Nagerechten",
     },
     {
-        "name": "Chocolademousse",
+        "name": "Chocolademousse 100g",
         "price": "160",
         "ingredients": "Nagerechten",
     },
     {
-        "name": "Fruit salade met seizoensgebonden fruit",
+        "name": "Fruit salade met seizoensgebonden fruit 300g",
         "price": "220",
         "ingredients": "Nagerechten",
     },
