--- a/productspl.html
+++ b/productspl.html
@@ -45,57 +45,57 @@
         "ingredients": "Napoje Bezalkoholowe"
     },
     {
-        "name": "Pepsi",
+        "name": "Pepsi 0.25",
         "price": "120",
         "ingredients": "Napoje Bezalkoholowe"
     },
     {
-        "name": "Pepsi Max",
+        "name": "Pepsi Max 0.25",
         "price": "120",
         "ingredients": "Napoje Bezalkoholowe"
     },
     {
-        "name": "Gazoza",
+        "name": "Gazoza 0.25",
         "price": "100",
         "ingredients": "Napoje Bezalkoholowe"
     },
     {
-        "name": "Ice Tea",
+        "name": "Ice Tea 0.25",
         "price": "120",
         "ingredients": "Napoje Bezalkoholowe"
     },
     {
-        "name": "7Up",
+        "name": "7Up 0.25",
         "price": "120",
         "ingredients": "Napoje Bezalkoholowe"
     },
     {
-        "name": "Sok",
+        "name": "Sok 0.25",
         "price": "140",
         "ingredients": "Napoje Bezalkoholowe"
     },
     {
-        "name": "Świeży Sok Cytrynowy",
+        "name": "Świeży Sok Cytrynowy 0.25",
         "price": "90",
         "ingredients": "Napoje Bezalkoholowe"
     },
     {
-        "name": "Świeży Sok Pomarańczowy",
+        "name": "Świeży Sok Pomarańczowy 0.25",
         "price": "180",
         "ingredients": "Napoje Bezalkoholowe"
     },
     {
-        "name": "Mirinda",
+        "name": "Mirinda 0.25",
         "price": "120",
         "ingredients": "Napoje Bezalkoholowe"
     },
     {
-        "name": "Domowa Lemoniada",
+        "name": "Domowa Lemoniada 0.25",
         "price": "160",
         "ingredients": "Napoje Bezalkoholowe"
     },
     {
-        "name": "Soda Owocowa",
+        "name": "Soda Owocowa 0.25",
         "price": "140",
         "ingredients": "Napoje Bezalkoholowe"
     },
@@ -179,92 +179,92 @@
                 //wines
                 [
     {
-        "name": "Synthesis Cuvee Barrique (Wytrawne)",
+        "name": "Synthesis Cuvee Barrique (Wytrawne) 0.75",
         "price": "1900",
         "ingredients": "Wino"
     },
     {
-        "name": "Dionis Vranec Barrique (Wytrawne)",
+        "name": "Dionis Vranec Barrique (Wytrawne) 0.75",
         "price": "2200",
         "ingredients": "Wino"
     },
     {
-        "name": "Hermes Vranec (Wytrawne)",
+        "name": "Hermes Vranec (Wytrawne) 0.75",
         "price": "1300",
         "ingredients": "Wino"
     },
     {
-        "name": "Hermes Cabernet Sauvignon (Wytrawne)",
+        "name": "Hermes Cabernet Sauvignon (Wytrawne) 0.75",
         "price": "1300",
         "ingredients": "Wino"
     },
     {
-        "name": "Amfora Vranec (Półwytrawne)",
+        "name": "Amfora Vranec (Półwytrawne) 0.75",
         "price": "900",
         "ingredients": "Wino"
     },
     {
-        "name": "Chardonnay Barrique Fermentowane (Wytrawne)",
+        "name": "Chardonnay Barrique Fermentowane (Wytrawne) 0.75",
         "price": "2400",
         "ingredients": "Wino"
     },
     {
-        "name": "Muscat Temjanika (Półwytrawne)",
+        "name": "Muscat Temjanika (Półwytrawne) 0.75",
         "price": "1350",
         "ingredients": "Wino"
     },
     {
-        "name": "Elegija Chardonnay (Wytrawne)",
+        "name": "Elegija Chardonnay (Wytrawne) 0.75",
         "price": "1300",
         "ingredients": "Wino"
     },
     {
-        "name": "Elegija Traminer (Wytrawne)",
+        "name": "Elegija Traminer (Wytrawne) 0.75",
         "price": "1300",
         "ingredients": "Wino"
     },
     {
-        "name": "Elegija Zupljanka (Wytrawne)",
+        "name": "Elegija Zupljanka (Wytrawne) 0.75",
         "price": "1300",
         "ingredients": "Wino"
     },
     {
-        "name": "Amphora Cuvee (Półwytrawne)",
+        "name": "Amphora Cuvee (Półwytrawne) 0.75",
         "price": "900",
         "ingredients": "Wino"
     },
     {
-        "name": "Temjanika (Wytrawne)",
+        "name": "Temjanika (Wytrawne) 0.75",
         "price": "1400",
         "ingredients": "Wino"
     },
     {
-        "name": "Chardonnay (Wytrawne)",
+        "name": "Chardonnay (Wytrawne) 0.75",
         "price": "1400",
         "ingredients": "Wino"
     },
     {
-        "name": "Sauvignon Blanc (Wytrawne)",
+        "name": "Sauvignon Blanc (Wytrawne) 0.75",
         "price": "1400",
         "ingredients": "Wino"
     },
     {
-        "name": "Amfora Rose (Wytrawne)",
+        "name": "Amfora Rose (Wytrawne) 0.75",
         "price": "900",
         "ingredients": "Wino"
     },
     {
-        "name": "Elegija Syrah (Wytrawne)",
+        "name": "Elegija Syrah (Wytrawne) 0.75",
         "price": "1200",
         "ingredients": "Wino"
     },
     {
-        "name": "Muscat Rolinger (Wytrawne)",
+        "name": "Muscat Rolinger (Wytrawne) 0.75",
         "price": "1250",
         "ingredients": "Wino"
     },
     {
-        "name": "Muscat Rolinger Czerwony (Półwytrawne)",
+        "name": "Muscat Rolinger Czerwony (Półwytrawne) 0.75",
         "price": "1250",
         "ingredients": "Wino"
     },
@@ -333,207 +333,207 @@
         // Alcoholic beverages
         [
   {
-    "name": "Żółta Rakija",
+    "name": "Żółta Rakija 0.04",
     "price": "120",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Biała Rakija",
+    "name": "Biała Rakija 0.04",
     "price": "120",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Mastika",
+    "name": "Mastika 0.04",
     "price": "120",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Rakija Azbuka",
+    "name": "Rakija Azbuka 0.04",
     "price": "130",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Gordion Amber Rakija",
+    "name": "Gordion Amber Rakija 0.04",
     "price": "160",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Badel Williams Rakija",
+    "name": "Badel Williams Rakija 0.04",
     "price": "170",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Gin Badel",
+    "name": "Gin Badel 0.04",
     "price": "120",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Smidgin",
+    "name": "Smidgin 0.04",
     "price": "250",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Gin Beefeater",
+    "name": "Gin Beefeater 0.04",
     "price": "170",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Gin Gordons",
+    "name": "Gin Gordons 0.04",
     "price": "190",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Gin Pink Gordons",
+    "name": "Gin Pink Gordons 0.04",
     "price": "180",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Gin Bombay",
+    "name": "Gin Bombay 0.04",
     "price": "240",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Wódka Badel",
+    "name": "Wódka Badel 0.04",
     "price": "120",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Baileys",
+    "name": "Baileys 0.04",
     "price": "180",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Feneys",
+    "name": "Feneys 0.04",
     "price": "150",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Likiery Gruszkowe Krushkovac",
+    "name": "Likiery Gruszkowe Krushkovac 0.04",
     "price": "140",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Tequila",
+    "name": "Tequila 0.03",
     "price": "130",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Amaretto",
+    "name": "Amaretto 0.04",
     "price": "150",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Korlat Slivovitz",
+    "name": "Korlat Slivovitz 0.04",
     "price": "220",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Korlat Maraska",
+    "name": "Korlat Maraska 0.05",
     "price": "220",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Shot",
+    "name": "Shot 0.04",
     "price": "100",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Smirnoff",
+    "name": "Smirnoff 0.04",
     "price": "160",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Jack Daniels",
+    "name": "Jack Daniels 0.04",
     "price": "280",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Jameson",
+    "name": "Jameson 0.04",
     "price": "180",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Jameson Black",
+    "name": "Jameson Black 0.04",
     "price": "290",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Johnny Red",
+    "name": "Johnny Red 0.04",
     "price": "160",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Johnny Black",
+    "name": "Johnny Black 0.04",
     "price": "260",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "4 Roses",
+    "name": "4 Roses 0.04",
     "price": "200",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "William Peel",
+    "name": "William Peel 0.04",
     "price": "150",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Rum Morgan",
+    "name": "Rum Morgan 0.04",
     "price": "160",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Jagermeister",
+    "name": "Jagermeister 0.04",
     "price": "210",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Pelinkovac Badel",
+    "name": "Pelinkovac Badel 0.04",
     "price": "120",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Pelinkovac Antik",
+    "name": "Pelinkovac Antik 0.04",
     "price": "170",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Koniak Badel",
+    "name": "Koniak Badel 0.04",
     "price": "120",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Koniak Badel Black",
+    "name": "Koniak Badel Black 0.04",
     "price": "160",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Rum Badel",
+    "name": "Rum Badel 0.04",
     "price": "120",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Stock 84",
+    "name": "Stock 84 0.04",
     "price": "150",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Tequila Olmeca",
+    "name": "Tequila Olmeca 0.04",
     "price": "170",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Aperol",
+    "name": "Aperol 0.04",
     "price": "160",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Korlat Lozova",
+    "name": "Korlat Lozova 0.04",
     "price": "220",
     "ingredients": "Napojów Alkoholowych"
   },
   {
-    "name": "Campari",
+    "name": "Campari 0.04",
     "price": "160",
     "ingredients": "Napojów Alkoholowych"
   },
@@ -669,7 +669,7 @@
     "ingredients": "Mielone mięso 250g, żółty ser 100g"
   },
   {
-    "name": "Kebapi z Kaymak",
+    "name": "Kebapi z Kaymak 350g",
     "price": "360",
     "ingredients": "Potrawy z mielonego mięsa"
   },
@@ -689,7 +689,7 @@
     "ingredients": "Mielone mięso 300g, ser żółty, zdenka, pieczarki, szynka"
   },
   {
-    "name": "Kebaby",
+    "name": "Kebaby 300g",
     "price": "320",
     "ingredients": "Potrawy z mielonego mięsa"
   },
@@ -797,12 +797,12 @@
         //dishes pan
         [
   {
-    "name": "Mięso wiejskie",
+    "name": "Mięso wiejskie 450g",
     "price": "440",
     "ingredients": "Wieprzowina, kurczak, ser, grzyby, cebula, czosnek, papryka, pomidor"
   },
   {
-    "name": "Patelnia Lihnidia",
+    "name": "Patelnia Lihnidia 450g",
     "price": "480",
     "ingredients": "Wieprzowina, kurczak, boczek, pomidor, papryka, cebula, czosnek, pieczarki, ser wędzony"
   },
@@ -817,7 +817,7 @@
     "ingredients": "Dania w patelni"
   },
   {
-    "name": "Grzyby z boczkiem i serem",
+    "name": "Grzyby z boczkiem i serem 450g",
     "price": "370",
     "ingredients": "Dania w patelni"
   },
@@ -1013,12 +1013,12 @@
     "ingredients": "Desery"
   },
   {
-    "name": "Mus czekoladowy",
+    "name": "Mus czekoladowy 100g",
     "price": "160",
     "ingredients": "Desery"
   },
   {
-    "name": "Sałatka owocowa z owocami sezonowymi",
+    "name": "Sałatka owocowa z owocami sezonowymi 300g",
     "price": "220",
     "ingredients": "Desery"
   },
