--- a/productsturkey.html
+++ b/productsturkey.html
@@ -46,57 +46,57 @@
         "ingredients": "Alkolsüz İçecekler"
     },
     {
-        "name": "Pepsi",
+        "name": "Pepsi 0.25",
         "price": "120",
         "ingredients": "Alkolsüz İçecekler"
     },
     {
-        "name": "Pepsi Max",
+        "name": "Pepsi Max 0.25",
         "price": "120",
         "ingredients": "Alkolsüz İçecekler"
     },
     {
-        "name": "Gazoza",
+        "name": "Gazoza 0.25",
         "price": "100",
         "ingredients": "Alkolsüz İçecekler"
     },
     {
-        "name": "Soğuk Çay",
+        "name": "Soğuk Çay 0.25",
         "price": "120",
         "ingredients": "Alkolsüz İçecekler"
     },
     {
-        "name": "7Up",
+        "name": "7Up 0.25",
         "price": "120",
         "ingredients": "Alkolsüz İçecekler"
     },
     {
-        "name": "Meyve Suyu",
+        "name": "Meyve Suyu 0.25",
         "price": "140",
         "ingredients": "Alkolsüz İçecekler"
     },
     {
-        "name": "Taze Limon Suyu",
+        "name": "Taze Limon Suyu 0.25",
         "price": "90",
         "ingredients": "Alkolsüz İçecekler"
     },
     {
-        "name": "Taze Portakal Suyu",
+        "name": "Taze Portakal Suyu 0.25",
         "price": "180",
         "ingredients": "Alkolsüz İçecekler"
     },
     {
-        "name": "Mirinda",
+        "name": "Mirinda 0.25",
         "price": "120",
         "ingredients": "Alkolsüz İçecekler"
     },
     {
-        "name": "Ev Yapımı Limonata",
+        "name": "Ev Yapımı Limonata 0.25",
         "price": "160",
         "ingredients": "Alkolsüz İçecekler"
     },
     {
-        "name": "Meyve Soda",
+        "name": "Meyve Soda 0.33",
         "price": "140",
         "ingredients": "Alkolsüz İçecekler"
     }
@@ -178,92 +178,92 @@
         // WINES
         [
     {
-        "name": "Synthesis Cuvee Barrique (Kuru)",
+        "name": "Synthesis Cuvee Barrique (Kuru) 0.75",
         "price": "1900",
         "ingredients": "Şarap"
     },
     {
-        "name": "Dionis Vranec Barrique (Kuru)",
+        "name": "Dionis Vranec Barrique (Kuru) 0.75",
         "price": "2200",
         "ingredients": "Şarap"
     },
     {
-        "name": "Hermes Vranec (Kuru)",
+        "name": "Hermes Vranec (Kuru) 0.75",
         "price": "1300",
         "ingredients": "Şarap"
     },
     {
-        "name": "Hermes Cabernet Sauvignon (Kuru)",
+        "name": "Hermes Cabernet Sauvignon (Kuru) 0.75",
         "price": "1300",
         "ingredients": "Şarap"
     },
     {
-        "name": "Amfora Vranec (Yarı Kuru)",
+        "name": "Amfora Vranec (Yarı Kuru) 0.75",
         "price": "900",
         "ingredients": "Şarap"
     },
     {
-        "name": "Chardonnay Barrique Fermented (Kuru)",
+        "name": "Chardonnay Barrique Fermented (Kuru) 0.75",
         "price": "2400",
         "ingredients": "Şarap"
     },
     {
-        "name": "Muscat Temjanika (Yarı Kuru)",
+        "name": "Muscat Temjanika (Yarı Kuru) 0.75",
         "price": "1350",
         "ingredients": "Şarap"
     },
     {
-        "name": "Elegija Chardonnay (Kuru)",
+        "name": "Elegija Chardonnay (Kuru) 0.75",
         "price": "1300",
         "ingredients": "Şarap"
     },
     {
-        "name": "Elegija Traminer (Kuru)",
+        "name": "Elegija Traminer (Kuru) 0.75",
         "price": "1300",
         "ingredients": "Şarap"
     },
     {
-        "name": "Elegija Zupljanka (Kuru)",
+        "name": "Elegija Zupljanka (Kuru) 0.75",
         "price": "1300",
         "ingredients": "Şarap"
     },
     {
-        "name": "Amphora Cuvee (Yarı Kuru)",
+        "name": "Amphora Cuvee (Yarı Kuru) 0.75",
         "price": "900",
         "ingredients": "Şarap"
     },
     {
-        "name": "Temjanika (Kuru)",
+        "name": "Temjanika (Kuru) 0.75",
         "price": "1400",
         "ingredients": "Şarap"
     },
     {
-        "name": "Chardonnay (Kuru)",
+        "name": "Chardonnay (Kuru) 0.75",
         "price": "1400",
         "ingredients": "Şarap"
     },
     {
-        "name": "Sauvignon Blanc (Kuru)",
+        "name": "Sauvignon Blanc (Kuru) 0.75",
         "price": "1400",
         "ingredients": "Şarap"
     },
     {
-        "name": "Amfora Rose (Kuru)",
+        "name": "Amfora Rose (Kuru) 0.75",
         "price": "900",
         "ingredients": "Şarap"
     },
     {
-        "name": "Elegija Syrah (Kuru)",
+        "name": "Elegija Syrah (Kuru) 0.75",
         "price": "1200",
         "ingredients": "Şarap"
     },
     {
-        "name": "Muscat Rolinger (Kuru)",
+        "name": "Muscat Rolinger (Kuru) 0.75",
         "price": "1250",
         "ingredients": "Şarap"
     },
     {
-        "name": "Muscat Rolinger Kırmızı (Yarı Kuru)",
+        "name": "Muscat Rolinger Kırmızı (Yarı Kuru) 0.75",
         "price": "1250",
         "ingredients": "Şarap"
     },
@@ -330,207 +330,207 @@
        //Alkoholi
        [
     {
-        "name": "Sarı Rakija",
+        "name": "Sarı Rakija 0.04",
         "price": "120",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Beyaz Rakija",
+        "name": "Beyaz Rakija 0.04",
         "price": "120",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Mastika",
+        "name": "Mastika 0.04",
         "price": "120",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Rakija Azbuka",
+        "name": "Rakija Azbuka 0.04",
         "price": "130",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Gordion Amber Rakija",
+        "name": "Gordion Amber Rakija 0.04",
         "price": "160",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Badel Williams Rakija",
+        "name": "Badel Williams Rakija 0.04",
         "price": "170",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Cin Badel",
+        "name": "Cin Badel 0.04",
         "price": "120",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Smidgin",
+        "name": "Smidgin 0.04",
         "price": "250",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Cin Beefeater",
+        "name": "Cin Beefeater 0.04",
         "price": "170",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Cin Gordons",
+        "name": "Cin Gordons 0.04",
         "price": "190",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Cin Pembe Gordons",
+        "name": "Cin Pembe Gordons 0.04",
         "price": "180",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Cin Bombay",
+        "name": "Cin Bombay 0.04",
         "price": "240",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Votka Badel",
+        "name": "Votka Badel 0.04",
         "price": "120",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Baileys",
+        "name": "Baileys 0.04",
         "price": "180",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Feneys",
+        "name": "Feneys 0.04",
         "price": "150",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Krushkovac Armut Likörü",
+        "name": "Krushkovac Armut Likörü 0.04",
         "price": "140",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Tekila",
+        "name": "Tekila 0.03",
         "price": "130",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Amaretto",
+        "name": "Amaretto 0.04",
         "price": "150",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Korlat Erik Rakısı",
+        "name": "Korlat Erik Rakısı 0.04",
         "price": "220",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Korlat Maraska",
+        "name": "Korlat Maraska 0.05",
         "price": "220",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Shot",
+        "name": "Shot 0.04",
         "price": "100",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Smirnoff",
+        "name": "Smirnoff 0.04",
         "price": "160",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Jack Daniels",
+        "name": "Jack Daniels 0.04",
         "price": "280",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Jameson",
+        "name": "Jameson 0.04",
         "price": "180",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Jameson Siyah",
+        "name": "Jameson Siyah 0.04",
         "price": "290",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Johnny Red",
+        "name": "Johnny Red 0.04",
         "price": "160",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Johnny Black",
+        "name": "Johnny Black 0.04",
         "price": "260",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "4 Roses",
+        "name": "4 Roses 0.04",
         "price": "200",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "William Peel",
+        "name": "William Peel 0.04",
         "price": "150",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Rum Morgan",
+        "name": "Rum Morgan 0.04",
         "price": "160",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Jagermeister",
+        "name": "Jagermeister 0.04",
         "price": "210",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Pelinkovac Badel",
+        "name": "Pelinkovac Badel 0.04",
         "price": "120",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Pelinkovac Antik",
+        "name": "Pelinkovac Antik 0.04",
         "price": "170",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Konyak Badel",
+        "name": "Konyak Badel 0.04",
         "price": "120",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Konyak Badel Siyah",
+        "name": "Konyak Badel Siyah 0.04",
         "price": "160",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Rum Badel",
+        "name": "Rum Badel 0.04",
         "price": "120",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Stock 84",
+        "name": "Stock 84 0.04",
         "price": "150",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Tekila Olmeca",
+        "name": "Tekila Olmeca 0.04",
         "price": "170",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Aperol",
+        "name": "Aperol 0.04",
         "price": "160",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Korlat Lozova",
+        "name": "Korlat Lozova 0.04",
         "price": "220",
         "ingredients": "Alkollü İçecekler"
     },
     {
-        "name": "Campari",
+        "name": "Campari 0.04",
         "price": "160",
         "ingredients": "Alkollü İçecekler"
     },
@@ -666,7 +666,7 @@
         "ingredients": "Kıyma 250g, kaşar peyniri 100g"
     },
     {
-        "name": "Kaymaklı Kebap",
+        "name": "Kaymaklı Kebap 350g",
         "price": "360",
         "ingredients": "Kıyma yemekleri"
     },
@@ -686,7 +686,7 @@
         "ingredients": "Kıyma 300g, kaşar peyniri, zdenka, mantar, jambon"
     },
     {
-        "name": "Kebap",
+        "name": "Kebap 300g",
         "price": "320",
         "ingredients": "Kıyma yemekleri"
     },
@@ -797,12 +797,12 @@
         //dishes in a pan 
         [
     {
-        "name": "Köy Yemeği",
+        "name": "Köy Yemeği 450g",
         "price": "440",
         "ingredients": "Domuz, tavuk, peynir, mantar, soğan, sarımsak, biber, domates"
     },
     {
-        "name": "Lihnidia Tavada",
+        "name": "Lihnidia Tavada 450g",
         "price": "480",
         "ingredients": "Domuz, tavuk, pastırma, domates, biber, soğan, sarımsak, şampiyon, tütsülenmiş peynir"
     },
@@ -817,7 +817,7 @@
         "ingredients": "Tavada yemekler"
     },
     {
-        "name": "Pastırmalı ve Peynirli Mantarlar",
+        "name": "Pastırmalı ve Peynirli Mantarlar 200g",
         "price": "370",
         "ingredients": "Tavada yemekler"
     },
@@ -1017,12 +1017,12 @@
         "ingredients": "Tatlılar"
     },
     {
-        "name": "Çikolatalı Mus",
+        "name": "Çikolatalı Mus 100g",
         "price": "160",
         "ingredients": "Tatlılar"
     },
     {
-        "name": "Mevsim Meyveleri ile Meyve Salatası",
+        "name": "Mevsim Meyveleri ile Meyve Salatası 300g",
         "price": "220",
         "ingredients": "Tatlılar"
     },
